kustomize/envs/exo/patches/liferay.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: web
        resources:
          requests:
            memory: "6Gi"
            cpu: "8"
          limits:
            memory: "6Gi"
            cpu: "16"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 10
