kustomize/envs/exo/patches/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
  - secretName: certificate-secret
    hosts:
      - "exoliferay.de"
      - "www.exoliferay.de"
      - "0.exoliferay.de"
      - "1.exoliferay.de"
      - "2.exoliferay.de"
      - "3.exoliferay.de"
      - "4.exoliferay.de"
